; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_crc32.c_gf32_mult.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_crc32.c_gf32_mult.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @gf32_mult to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gf32_mult(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = zext i32 %8 to i64
  store i64 %9, i64* %6, align 8
  store i64 0, i64* %7, align 8
  store i32 0, i32* %5, align 4
  br label %10

10:                                               ; preds = %27, %2
  %11 = load i32, i32* %5, align 4
  %12 = icmp slt i32 %11, 32
  br i1 %12, label %13, label %30

13:                                               ; preds = %10
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* %5, align 4
  %16 = shl i32 1, %15
  %17 = and i32 %14, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %26

19:                                               ; preds = %13
  %20 = load i64, i64* %6, align 8
  %21 = load i32, i32* %5, align 4
  %22 = zext i32 %21 to i64
  %23 = shl i64 %20, %22
  %24 = load i64, i64* %7, align 8
  %25 = xor i64 %24, %23
  store i64 %25, i64* %7, align 8
  br label %26

26:                                               ; preds = %19, %13
  br label %27

27:                                               ; preds = %26
  %28 = load i32, i32* %5, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %5, align 4
  br label %10

30:                                               ; preds = %10
  %31 = load i64, i64* %7, align 8
  %32 = call i32 @gf32_mod(i64 %31, i32 62)
  ret i32 %32
}

declare dso_local i32 @gf32_mod(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
